--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <img src="./img/herramienta-4.jpg" alt="">
         <img src="./img/herramienta-5.jpg" alt="">
         <img src="./img/herramienta-6.jpg" alt="">
+        <img src="./img/compra.jpg" alt="">
+        
     </section>
 </body>
 </html>
